--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-13 02:47 -->
+<!-- 2022-11-14 02:48 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,47 +46,47 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org5a4a159">1. 妙妙文章</a>
+<li><a href="#org5e57964">1. 妙妙文章</a>
 <ul>
-<li><a href="#org75a3e8e">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org220c5ef">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org3b41927">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orgc49ec89">1.4. 关于编辑器</a></li>
-<li><a href="#orgdafc928">1.5. 关于代码</a>
+<li><a href="#orge741f1e">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org6dac28d">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orgf7c33d7">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org31f0a4b">1.4. 关于编辑器</a></li>
+<li><a href="#orgc5d1a4d">1.5. 关于代码</a>
 <ul>
-<li><a href="#org3da1c6a">1.5.1. Lisp</a></li>
+<li><a href="#org4eff71f">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org4a52386">1.6. 关于CPU</a></li>
-<li><a href="#org8cd194e">1.7. 关于算法</a>
+<li><a href="#org0ab70f4">1.6. 关于CPU</a></li>
+<li><a href="#org85de394">1.7. 关于算法</a>
 <ul>
-<li><a href="#org050382f">1.7.1. 关于随机</a></li>
+<li><a href="#orgf303c9f">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orgfead8c8">1.8. 关于AI</a></li>
-<li><a href="#org47d0457">1.9. 关于软件</a>
+<li><a href="#orgc7911d0">1.8. 关于AI</a></li>
+<li><a href="#orgefcd549">1.9. 关于软件</a>
 <ul>
-<li><a href="#org282c22f">1.9.1. SQLite</a></li>
+<li><a href="#orgbae6959">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org516a816">1.10. 关于workflow</a></li>
+<li><a href="#org0e0eb27">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orgf0c8957">2. 棒棒视频</a>
+<li><a href="#orga43320f">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgcf3db2d">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org33db652">2.2. 各种剧</a></li>
-<li><a href="#orgfb570cd">2.3. 电影</a></li>
+<li><a href="#orgd36ecbc">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgafc908a">2.2. 各种剧</a></li>
+<li><a href="#org2a00954">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgec826a0">3. 快乐游戏</a></li>
-<li><a href="#org6dcb890">4. 宝藏博主</a></li>
-<li><a href="#orgb56e635">5. 有意思的</a>
+<li><a href="#orgcfc7f22">3. 快乐游戏</a></li>
+<li><a href="#orga45d8cb">4. 宝藏博主</a></li>
+<li><a href="#orgeedb152">5. 有意思的</a>
 <ul>
-<li><a href="#orgf9b4b76">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orga572cc7">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#orgce3f97b">6. 我想玩的</a></li>
+<li><a href="#org2f1ede4">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -95,8 +95,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org5a4a159" class="outline-2">
-<h2 id="org5a4a159"><span class="section-number-2">1.</span> <a href="#org5a4a159">妙妙文章</a></h2>
+<div id="outline-container-org5e57964" class="outline-2">
+<h2 id="org5e57964"><span class="section-number-2">1.</span> <a href="#org5e57964">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org0f1dd13">
+<figure id="orgced1b06">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -497,8 +497,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org75a3e8e" class="outline-3">
-<h3 id="org75a3e8e"><span class="section-number-3">1.1.</span> <a href="#org75a3e8e">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-orge741f1e" class="outline-3">
+<h3 id="orge741f1e"><span class="section-number-3">1.1.</span> <a href="#orge741f1e">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -539,8 +539,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-org220c5ef" class="outline-3">
-<h3 id="org220c5ef"><span class="section-number-3">1.2.</span> <a href="#org220c5ef">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org6dac28d" class="outline-3">
+<h3 id="org6dac28d"><span class="section-number-3">1.2.</span> <a href="#org6dac28d">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -570,8 +570,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org3b41927" class="outline-3">
-<h3 id="org3b41927"><span class="section-number-3">1.3.</span> <a href="#org3b41927">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orgf7c33d7" class="outline-3">
+<h3 id="orgf7c33d7"><span class="section-number-3">1.3.</span> <a href="#orgf7c33d7">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -605,8 +605,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orgc49ec89" class="outline-3">
-<h3 id="orgc49ec89"><span class="section-number-3">1.4.</span> <a href="#orgc49ec89">关于编辑器</a></h3>
+<div id="outline-container-org31f0a4b" class="outline-3">
+<h3 id="org31f0a4b"><span class="section-number-3">1.4.</span> <a href="#org31f0a4b">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -622,8 +622,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgdafc928" class="outline-3">
-<h3 id="orgdafc928"><span class="section-number-3">1.5.</span> <a href="#orgdafc928">关于代码</a></h3>
+<div id="outline-container-orgc5d1a4d" class="outline-3">
+<h3 id="orgc5d1a4d"><span class="section-number-3">1.5.</span> <a href="#orgc5d1a4d">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -648,8 +648,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org3da1c6a" class="outline-4">
-<h4 id="org3da1c6a"><span class="section-number-4">1.5.1.</span> <a href="#org3da1c6a">Lisp</a></h4>
+<div id="outline-container-org4eff71f" class="outline-4">
+<h4 id="org4eff71f"><span class="section-number-4">1.5.1.</span> <a href="#org4eff71f">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -672,8 +672,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org4a52386" class="outline-3">
-<h3 id="org4a52386"><span class="section-number-3">1.6.</span> <a href="#org4a52386">关于CPU</a></h3>
+<div id="outline-container-org0ab70f4" class="outline-3">
+<h3 id="org0ab70f4"><span class="section-number-3">1.6.</span> <a href="#org0ab70f4">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -688,8 +688,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org8cd194e" class="outline-3">
-<h3 id="org8cd194e"><span class="section-number-3">1.7.</span> <a href="#org8cd194e">关于算法</a></h3>
+<div id="outline-container-org85de394" class="outline-3">
+<h3 id="org85de394"><span class="section-number-3">1.7.</span> <a href="#org85de394">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -708,8 +708,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org050382f" class="outline-4">
-<h4 id="org050382f"><span class="section-number-4">1.7.1.</span> <a href="#org050382f">关于随机</a></h4>
+<div id="outline-container-orgf303c9f" class="outline-4">
+<h4 id="orgf303c9f"><span class="section-number-4">1.7.1.</span> <a href="#orgf303c9f">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -723,8 +723,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgfead8c8" class="outline-3">
-<h3 id="orgfead8c8"><span class="section-number-3">1.8.</span> <a href="#orgfead8c8">关于AI</a></h3>
+<div id="outline-container-orgc7911d0" class="outline-3">
+<h3 id="orgc7911d0"><span class="section-number-3">1.8.</span> <a href="#orgc7911d0">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -734,8 +734,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org47d0457" class="outline-3">
-<h3 id="org47d0457"><span class="section-number-3">1.9.</span> <a href="#org47d0457">关于软件</a></h3>
+<div id="outline-container-orgefcd549" class="outline-3">
+<h3 id="orgefcd549"><span class="section-number-3">1.9.</span> <a href="#orgefcd549">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -746,8 +746,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org282c22f" class="outline-4">
-<h4 id="org282c22f"><span class="section-number-4">1.9.1.</span> <a href="#org282c22f">SQLite</a></h4>
+<div id="outline-container-orgbae6959" class="outline-4">
+<h4 id="orgbae6959"><span class="section-number-4">1.9.1.</span> <a href="#orgbae6959">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -761,8 +761,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org516a816" class="outline-3">
-<h3 id="org516a816"><span class="section-number-3">1.10.</span> <a href="#org516a816">关于workflow</a></h3>
+<div id="outline-container-org0e0eb27" class="outline-3">
+<h3 id="org0e0eb27"><span class="section-number-3">1.10.</span> <a href="#org0e0eb27">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -772,8 +772,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgf0c8957" class="outline-2">
-<h2 id="orgf0c8957"><span class="section-number-2">2.</span> <a href="#orgf0c8957">棒棒视频</a></h2>
+<div id="outline-container-orga43320f" class="outline-2">
+<h2 id="orga43320f"><span class="section-number-2">2.</span> <a href="#orga43320f">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -832,8 +832,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orgcf3db2d" class="outline-3">
-<h3 id="orgcf3db2d"><span class="section-number-3">2.1.</span> <a href="#orgcf3db2d">Veritasium 真理元素</a></h3>
+<div id="outline-container-orgd36ecbc" class="outline-3">
+<h3 id="orgd36ecbc"><span class="section-number-3">2.1.</span> <a href="#orgd36ecbc">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -858,8 +858,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org33db652" class="outline-3">
-<h3 id="org33db652"><span class="section-number-3">2.2.</span> <a href="#org33db652">各种剧</a></h3>
+<div id="outline-container-orgafc908a" class="outline-3">
+<h3 id="orgafc908a"><span class="section-number-3">2.2.</span> <a href="#orgafc908a">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -883,8 +883,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgfb570cd" class="outline-3">
-<h3 id="orgfb570cd"><span class="section-number-3">2.3.</span> <a href="#orgfb570cd">电影</a></h3>
+<div id="outline-container-org2a00954" class="outline-3">
+<h3 id="org2a00954"><span class="section-number-3">2.3.</span> <a href="#org2a00954">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -910,7 +910,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="org5037756">
+<figure id="orgf0c7927">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -927,8 +927,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgec826a0" class="outline-2">
-<h2 id="orgec826a0"><span class="section-number-2">3.</span> <a href="#orgec826a0">快乐游戏</a></h2>
+<div id="outline-container-orgcfc7f22" class="outline-2">
+<h2 id="orgcfc7f22"><span class="section-number-2">3.</span> <a href="#orgcfc7f22">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -958,8 +958,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org6dcb890" class="outline-2">
-<h2 id="org6dcb890"><span class="section-number-2">4.</span> <a href="#org6dcb890">宝藏博主</a></h2>
+<div id="outline-container-orga45d8cb" class="outline-2">
+<h2 id="orga45d8cb"><span class="section-number-2">4.</span> <a href="#orga45d8cb">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -970,7 +970,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org464877b">
+<figure id="orgbdceebf">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -978,8 +978,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgb56e635" class="outline-2">
-<h2 id="orgb56e635"><span class="section-number-2">5.</span> <a href="#orgb56e635">有意思的</a></h2>
+<div id="outline-container-orgeedb152" class="outline-2">
+<h2 id="orgeedb152"><span class="section-number-2">5.</span> <a href="#orgeedb152">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1011,8 +1011,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orgf9b4b76" class="outline-3">
-<h3 id="orgf9b4b76"><span class="section-number-3">5.1.</span> <a href="#orgf9b4b76">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orga572cc7" class="outline-3">
+<h3 id="orga572cc7"><span class="section-number-3">5.1.</span> <a href="#orga572cc7">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1024,8 +1024,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orgce3f97b" class="outline-2">
-<h2 id="orgce3f97b"><span class="section-number-2">6.</span> <a href="#orgce3f97b">我想玩的</a></h2>
+<div id="outline-container-org2f1ede4" class="outline-2">
+<h2 id="org2f1ede4"><span class="section-number-2">6.</span> <a href="#org2f1ede4">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1048,7 +1048,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-11-08 21:46</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-13 02:47</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-14 02:48</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
