Update from https://github.com/thebesttv/eserver-static/commit/8baf16f180a2ea638aaef3d7c0458764e13a0368

--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-14 02:48 -->
+<!-- 2022-11-16 02:47 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -46,13 +46,13 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org45ce737">1. What is Vectored IO</a></li>
-<li><a href="#org6e8adce">2. Vectored IO in Linux</a></li>
-<li><a href="#org9114ea5">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#org982ff66">4. Examples</a>
+<li><a href="#org57dfade">1. What is Vectored IO</a></li>
+<li><a href="#orgdd554aa">2. Vectored IO in Linux</a></li>
+<li><a href="#orga36c043">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#org8637f99">4. Examples</a>
 <ul>
-<li><a href="#orgcd62483">4.1. <code>write()</code></a></li>
-<li><a href="#org5120add">4.2. <code>writev()</code></a></li>
+<li><a href="#orga40f41b">4.1. <code>write()</code></a></li>
+<li><a href="#org6d4644a">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -68,8 +68,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-org45ce737" class="outline-2">
-<h2 id="org45ce737"><span class="section-number-2">1.</span> <a href="#org45ce737">What is Vectored IO</a></h2>
+<div id="outline-container-org57dfade" class="outline-2">
+<h2 id="org57dfade"><span class="section-number-2">1.</span> <a href="#org57dfade">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -80,8 +80,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-org6e8adce" class="outline-2">
-<h2 id="org6e8adce"><span class="section-number-2">2.</span> <a href="#org6e8adce">Vectored IO in Linux</a></h2>
+<div id="outline-container-orgdd554aa" class="outline-2">
+<h2 id="orgdd554aa"><span class="section-number-2">2.</span> <a href="#orgdd554aa">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -119,8 +119,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-org9114ea5" class="outline-2">
-<h2 id="org9114ea5"><span class="section-number-2">3.</span> <a href="#org9114ea5">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-orga36c043" class="outline-2">
+<h2 id="orga36c043"><span class="section-number-2">3.</span> <a href="#orga36c043">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -137,12 +137,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-org982ff66" class="outline-2">
-<h2 id="org982ff66"><span class="section-number-2">4.</span> <a href="#org982ff66">Examples</a></h2>
+<div id="outline-container-org8637f99" class="outline-2">
+<h2 id="org8637f99"><span class="section-number-2">4.</span> <a href="#org8637f99">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orgcd62483" class="outline-3">
-<h3 id="orgcd62483"><span class="section-number-3">4.1.</span> <a href="#orgcd62483"><code>write()</code></a></h3>
+<div id="outline-container-orga40f41b" class="outline-3">
+<h3 id="orga40f41b"><span class="section-number-3">4.1.</span> <a href="#orga40f41b"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -165,8 +165,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-org5120add" class="outline-3">
-<h3 id="org5120add"><span class="section-number-3">4.2.</span> <a href="#org5120add"><code>writev()</code></a></h3>
+<div id="outline-container-org6d4644a" class="outline-3">
+<h3 id="org6d4644a"><span class="section-number-3">4.2.</span> <a href="#org6d4644a"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -207,7 +207,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-14 02:48</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 02:47</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
 </table>
