--- a/content/daily/2021-05-20.html
+++ b/content/daily/2021-05-20.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-14 02:48 -->
+<!-- 2022-11-16 02:47 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>520快乐</title>
@@ -46,9 +46,9 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orge1e3c97">1. 水水体育课</a></li>
-<li><a href="#org187d617">2. 又是一轮毕业季</a></li>
-<li><a href="#org3d9349e">3. 520 点灯</a></li>
+<li><a href="#org873076e">1. 水水体育课</a></li>
+<li><a href="#org481f689">2. 又是一轮毕业季</a></li>
+<li><a href="#org0fc29bb">3. 520 点灯</a></li>
 </ul>
 </div>
 </nav>
@@ -57,8 +57,8 @@
 虽然84我的节日，不过一大早刷着空间还挺欢乐的，就祝我的朋友们快乐叭😃
 </p>
 
-<div id="outline-container-orge1e3c97" class="outline-2">
-<h2 id="orge1e3c97"><span class="section-number-2">1.</span> <a href="#orge1e3c97">水水体育课</a></h2>
+<div id="outline-container-org873076e" class="outline-2">
+<h2 id="org873076e"><span class="section-number-2">1.</span> <a href="#org873076e">水水体育课</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 果然体侧第一天的体育课超级舒服，虽然50米、引体向上啥的测得不咋的，不过挺舒服的，哈哈。还帮一个女生仰卧起坐的时候按腿，快乐😉。
@@ -66,8 +66,8 @@
 </div>
 </div>
 
-<div id="outline-container-org187d617" class="outline-2">
-<h2 id="org187d617"><span class="section-number-2">2.</span> <a href="#org187d617">又是一轮毕业季</a></h2>
+<div id="outline-container-org481f689" class="outline-2">
+<h2 id="org481f689"><span class="section-number-2">2.</span> <a href="#org481f689">又是一轮毕业季</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 今天是本科毕业生拍照，好多人穿着学士服在图书馆前面的草坪和台阶拍照，
@@ -86,8 +86,8 @@
 </div>
 </div>
 
-<div id="outline-container-org3d9349e" class="outline-2">
-<h2 id="org3d9349e"><span class="section-number-2">3.</span> <a href="#org3d9349e">520 点灯</a></h2>
+<div id="outline-container-org0fc29bb" class="outline-2">
+<h2 id="org0fc29bb"><span class="section-number-2">3.</span> <a href="#org0fc29bb">520 点灯</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 简直是去看人的😓
@@ -105,7 +105,7 @@
 偷偷盗一张亦憨的520全图🤫😉
 </p>
 
-<figure id="orgf1adb04">
+<figure id="orge081192">
 <img src="./2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure>
@@ -117,7 +117,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-20 07:51</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-21 09:56</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-14 02:48</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 02:47</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-20.org">content/daily/2021-05-20.org</a></td></tr>
 </table>
