Update from https://github.com/thebesttv/eserver-static/commit/8baf16f180a2ea638aaef3d7c0458764e13a0368

--- a/content/daily/2021-05-19.html
+++ b/content/daily/2021-05-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-16 02:47 -->
+<!-- 2022-11-16 11:22 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不知道要写啥的第二篇日记</title>
@@ -46,17 +46,17 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org1679997">1. 一大早</a></li>
-<li><a href="#org58ad5c5">2. 然后是剩下的无趣一天🙃</a></li>
-<li><a href="#org255b48d">3. 科研训练</a></li>
-<li><a href="#orgdd76e3d">4. 520</a></li>
+<li><a href="#org64933b8">1. 一大早</a></li>
+<li><a href="#orga1c4c9b">2. 然后是剩下的无趣一天🙃</a></li>
+<li><a href="#org396deb8">3. 科研训练</a></li>
+<li><a href="#orgdc3df74">4. 520</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org1679997" class="outline-2">
-<h2 id="org1679997"><span class="section-number-2">1.</span> <a href="#org1679997">一大早</a></h2>
+<div id="outline-container-org64933b8" class="outline-2">
+<h2 id="org64933b8"><span class="section-number-2">1.</span> <a href="#org64933b8">一大早</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 概统八点半才上课，现在在宿舍干脆干点啥。 给博客加上了一个
@@ -65,8 +65,8 @@
 </div>
 </div>
 
-<div id="outline-container-org58ad5c5" class="outline-2">
-<h2 id="org58ad5c5"><span class="section-number-2">2.</span> <a href="#org58ad5c5">然后是剩下的无趣一天🙃</a></h2>
+<div id="outline-container-orga1c4c9b" class="outline-2">
+<h2 id="orga1c4c9b"><span class="section-number-2">2.</span> <a href="#orga1c4c9b">然后是剩下的无趣一天🙃</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 下午数电实验，回宿舍了才发现U盘忘拿了……结果一共撑着伞在雨里走了三趟……
@@ -92,8 +92,8 @@
 </div>
 </div>
 
-<div id="outline-container-org255b48d" class="outline-2">
-<h2 id="org255b48d"><span class="section-number-2">3.</span> <a href="#org255b48d">科研训练</a></h2>
+<div id="outline-container-org396deb8" class="outline-2">
+<h2 id="org396deb8"><span class="section-number-2">3.</span> <a href="#org396deb8">科研训练</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 哦对了，下午数电实验结束去找了学长，弄了弄科研训练的事情，大概就是一年弄出篇文章的样子。
@@ -101,8 +101,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgdd76e3d" class="outline-2">
-<h2 id="orgdd76e3d"><span class="section-number-2">4.</span> <a href="#orgdd76e3d">520</a></h2>
+<div id="outline-container-orgdc3df74" class="outline-2">
+<h2 id="orgdc3df74"><span class="section-number-2">4.</span> <a href="#orgdc3df74">520</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 又对了，明天520了（虽然和我莫得关系）。
@@ -116,7 +116,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:16</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 02:47</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 11:22</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-19.org">content/daily/2021-05-19.org</a></td></tr>
 </table>
