--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-16 02:47 -->
+<!-- 2022-11-16 11:22 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,47 +46,47 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9ba19ee">1. 妙妙文章</a>
+<li><a href="#org5576f92">1. 妙妙文章</a>
 <ul>
-<li><a href="#org4517877">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org77ed84f">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#orgd3433fe">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org8a2ffc7">1.4. 关于编辑器</a></li>
-<li><a href="#org72223ce">1.5. 关于代码</a>
+<li><a href="#orgf0e4ed7">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org0e38530">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org604601d">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orgc67bedd">1.4. 关于编辑器</a></li>
+<li><a href="#org7485bd1">1.5. 关于代码</a>
 <ul>
-<li><a href="#orgde201ab">1.5.1. Lisp</a></li>
+<li><a href="#orgfe157a3">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orgcef3072">1.6. 关于CPU</a></li>
-<li><a href="#org30369df">1.7. 关于算法</a>
+<li><a href="#orge4ab797">1.6. 关于CPU</a></li>
+<li><a href="#org9bd1a06">1.7. 关于算法</a>
 <ul>
-<li><a href="#org588e646">1.7.1. 关于随机</a></li>
+<li><a href="#org7c5f20b">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orgf03eac4">1.8. 关于AI</a></li>
-<li><a href="#org52bba69">1.9. 关于软件</a>
+<li><a href="#org925c0c4">1.8. 关于AI</a></li>
+<li><a href="#org7928424">1.9. 关于软件</a>
 <ul>
-<li><a href="#org1ae29ee">1.9.1. SQLite</a></li>
+<li><a href="#org5318d0f">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgcd70933">1.10. 关于workflow</a></li>
+<li><a href="#org2fecefc">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org9d31d04">2. 棒棒视频</a>
+<li><a href="#org9f04721">2. 棒棒视频</a>
 <ul>
-<li><a href="#org7e157e3">2.1. Veritasium 真理元素</a></li>
-<li><a href="#orgb5e3aca">2.2. 各种剧</a></li>
-<li><a href="#orgec84fbc">2.3. 电影</a></li>
+<li><a href="#org84bc0af">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org026e873">2.2. 各种剧</a></li>
+<li><a href="#org94cf622">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgd6bcce0">3. 快乐游戏</a></li>
-<li><a href="#orgec534ab">4. 宝藏博主</a></li>
-<li><a href="#orgc1f1aa8">5. 有意思的</a>
+<li><a href="#org4f5526c">3. 快乐游戏</a></li>
+<li><a href="#org32ed9be">4. 宝藏博主</a></li>
+<li><a href="#orgfac7ec5">5. 有意思的</a>
 <ul>
-<li><a href="#orgb0d9ed8">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orge4a76af">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org1bfb3c5">6. 我想玩的</a></li>
+<li><a href="#org945135b">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -95,8 +95,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org9ba19ee" class="outline-2">
-<h2 id="org9ba19ee"><span class="section-number-2">1.</span> <a href="#org9ba19ee">妙妙文章</a></h2>
+<div id="outline-container-org5576f92" class="outline-2">
+<h2 id="org5576f92"><span class="section-number-2">1.</span> <a href="#org5576f92">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="orgf02b562">
+<figure id="orgf594052">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -497,8 +497,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org4517877" class="outline-3">
-<h3 id="org4517877"><span class="section-number-3">1.1.</span> <a href="#org4517877">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-orgf0e4ed7" class="outline-3">
+<h3 id="orgf0e4ed7"><span class="section-number-3">1.1.</span> <a href="#orgf0e4ed7">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -539,8 +539,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-org77ed84f" class="outline-3">
-<h3 id="org77ed84f"><span class="section-number-3">1.2.</span> <a href="#org77ed84f">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org0e38530" class="outline-3">
+<h3 id="org0e38530"><span class="section-number-3">1.2.</span> <a href="#org0e38530">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -570,8 +570,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-orgd3433fe" class="outline-3">
-<h3 id="orgd3433fe"><span class="section-number-3">1.3.</span> <a href="#orgd3433fe">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org604601d" class="outline-3">
+<h3 id="org604601d"><span class="section-number-3">1.3.</span> <a href="#org604601d">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -605,8 +605,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org8a2ffc7" class="outline-3">
-<h3 id="org8a2ffc7"><span class="section-number-3">1.4.</span> <a href="#org8a2ffc7">关于编辑器</a></h3>
+<div id="outline-container-orgc67bedd" class="outline-3">
+<h3 id="orgc67bedd"><span class="section-number-3">1.4.</span> <a href="#orgc67bedd">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -622,8 +622,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org72223ce" class="outline-3">
-<h3 id="org72223ce"><span class="section-number-3">1.5.</span> <a href="#org72223ce">关于代码</a></h3>
+<div id="outline-container-org7485bd1" class="outline-3">
+<h3 id="org7485bd1"><span class="section-number-3">1.5.</span> <a href="#org7485bd1">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -648,8 +648,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgde201ab" class="outline-4">
-<h4 id="orgde201ab"><span class="section-number-4">1.5.1.</span> <a href="#orgde201ab">Lisp</a></h4>
+<div id="outline-container-orgfe157a3" class="outline-4">
+<h4 id="orgfe157a3"><span class="section-number-4">1.5.1.</span> <a href="#orgfe157a3">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -672,8 +672,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orgcef3072" class="outline-3">
-<h3 id="orgcef3072"><span class="section-number-3">1.6.</span> <a href="#orgcef3072">关于CPU</a></h3>
+<div id="outline-container-orge4ab797" class="outline-3">
+<h3 id="orge4ab797"><span class="section-number-3">1.6.</span> <a href="#orge4ab797">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -688,8 +688,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org30369df" class="outline-3">
-<h3 id="org30369df"><span class="section-number-3">1.7.</span> <a href="#org30369df">关于算法</a></h3>
+<div id="outline-container-org9bd1a06" class="outline-3">
+<h3 id="org9bd1a06"><span class="section-number-3">1.7.</span> <a href="#org9bd1a06">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -708,8 +708,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org588e646" class="outline-4">
-<h4 id="org588e646"><span class="section-number-4">1.7.1.</span> <a href="#org588e646">关于随机</a></h4>
+<div id="outline-container-org7c5f20b" class="outline-4">
+<h4 id="org7c5f20b"><span class="section-number-4">1.7.1.</span> <a href="#org7c5f20b">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -723,8 +723,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgf03eac4" class="outline-3">
-<h3 id="orgf03eac4"><span class="section-number-3">1.8.</span> <a href="#orgf03eac4">关于AI</a></h3>
+<div id="outline-container-org925c0c4" class="outline-3">
+<h3 id="org925c0c4"><span class="section-number-3">1.8.</span> <a href="#org925c0c4">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -734,8 +734,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org52bba69" class="outline-3">
-<h3 id="org52bba69"><span class="section-number-3">1.9.</span> <a href="#org52bba69">关于软件</a></h3>
+<div id="outline-container-org7928424" class="outline-3">
+<h3 id="org7928424"><span class="section-number-3">1.9.</span> <a href="#org7928424">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -746,8 +746,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org1ae29ee" class="outline-4">
-<h4 id="org1ae29ee"><span class="section-number-4">1.9.1.</span> <a href="#org1ae29ee">SQLite</a></h4>
+<div id="outline-container-org5318d0f" class="outline-4">
+<h4 id="org5318d0f"><span class="section-number-4">1.9.1.</span> <a href="#org5318d0f">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -761,8 +761,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgcd70933" class="outline-3">
-<h3 id="orgcd70933"><span class="section-number-3">1.10.</span> <a href="#orgcd70933">关于workflow</a></h3>
+<div id="outline-container-org2fecefc" class="outline-3">
+<h3 id="org2fecefc"><span class="section-number-3">1.10.</span> <a href="#org2fecefc">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -772,8 +772,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org9d31d04" class="outline-2">
-<h2 id="org9d31d04"><span class="section-number-2">2.</span> <a href="#org9d31d04">棒棒视频</a></h2>
+<div id="outline-container-org9f04721" class="outline-2">
+<h2 id="org9f04721"><span class="section-number-2">2.</span> <a href="#org9f04721">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -832,8 +832,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org7e157e3" class="outline-3">
-<h3 id="org7e157e3"><span class="section-number-3">2.1.</span> <a href="#org7e157e3">Veritasium 真理元素</a></h3>
+<div id="outline-container-org84bc0af" class="outline-3">
+<h3 id="org84bc0af"><span class="section-number-3">2.1.</span> <a href="#org84bc0af">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -858,8 +858,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgb5e3aca" class="outline-3">
-<h3 id="orgb5e3aca"><span class="section-number-3">2.2.</span> <a href="#orgb5e3aca">各种剧</a></h3>
+<div id="outline-container-org026e873" class="outline-3">
+<h3 id="org026e873"><span class="section-number-3">2.2.</span> <a href="#org026e873">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -883,8 +883,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgec84fbc" class="outline-3">
-<h3 id="orgec84fbc"><span class="section-number-3">2.3.</span> <a href="#orgec84fbc">电影</a></h3>
+<div id="outline-container-org94cf622" class="outline-3">
+<h3 id="org94cf622"><span class="section-number-3">2.3.</span> <a href="#org94cf622">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -910,7 +910,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="org1376219">
+<figure id="org1c0a3aa">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -927,8 +927,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgd6bcce0" class="outline-2">
-<h2 id="orgd6bcce0"><span class="section-number-2">3.</span> <a href="#orgd6bcce0">快乐游戏</a></h2>
+<div id="outline-container-org4f5526c" class="outline-2">
+<h2 id="org4f5526c"><span class="section-number-2">3.</span> <a href="#org4f5526c">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -958,8 +958,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgec534ab" class="outline-2">
-<h2 id="orgec534ab"><span class="section-number-2">4.</span> <a href="#orgec534ab">宝藏博主</a></h2>
+<div id="outline-container-org32ed9be" class="outline-2">
+<h2 id="org32ed9be"><span class="section-number-2">4.</span> <a href="#org32ed9be">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -970,7 +970,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="orgebdefb2">
+<figure id="org0429077">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -978,8 +978,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgc1f1aa8" class="outline-2">
-<h2 id="orgc1f1aa8"><span class="section-number-2">5.</span> <a href="#orgc1f1aa8">有意思的</a></h2>
+<div id="outline-container-orgfac7ec5" class="outline-2">
+<h2 id="orgfac7ec5"><span class="section-number-2">5.</span> <a href="#orgfac7ec5">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1011,8 +1011,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orgb0d9ed8" class="outline-3">
-<h3 id="orgb0d9ed8"><span class="section-number-3">5.1.</span> <a href="#orgb0d9ed8">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orge4a76af" class="outline-3">
+<h3 id="orge4a76af"><span class="section-number-3">5.1.</span> <a href="#orge4a76af">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1024,8 +1024,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org1bfb3c5" class="outline-2">
-<h2 id="org1bfb3c5"><span class="section-number-2">6.</span> <a href="#org1bfb3c5">我想玩的</a></h2>
+<div id="outline-container-org945135b" class="outline-2">
+<h2 id="org945135b"><span class="section-number-2">6.</span> <a href="#org945135b">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1048,7 +1048,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-11-08 21:46</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 02:47</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 11:22</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
