--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-16 02:47 -->
+<!-- 2022-11-16 11:22 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org874c74e">1. 暑假</a>
+<li><a href="#orgf272841">1. 暑假</a>
 <ul>
-<li><a href="#org6a14880">1.1. 夏令营</a></li>
+<li><a href="#org135d2cf">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org245add2">2. 打工</a></li>
-<li><a href="#org30c99a1">3. 我的928</a>
+<li><a href="#org33338cb">2. 打工</a></li>
+<li><a href="#orgd720581">3. 我的928</a>
 <ul>
-<li><a href="#org73b993d">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org9ea9b99">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#orgb8dca27">4. 他们的928</a></li>
-<li><a href="#org102560b">5. 总结</a></li>
+<li><a href="#org092fdc8">4. 他们的928</a></li>
+<li><a href="#org651b53e">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="orgdd26f44">
+<figure id="org3b274b6">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org874c74e" class="outline-2">
-<h2 id="org874c74e"><span class="section-number-2">1.</span> <a href="#org874c74e">暑假</a></h2>
+<div id="outline-container-orgf272841" class="outline-2">
+<h2 id="orgf272841"><span class="section-number-2">1.</span> <a href="#orgf272841">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-org6a14880" class="outline-3">
-<h3 id="org6a14880"><span class="section-number-3">1.1.</span> <a href="#org6a14880">夏令营</a></h3>
+<div id="outline-container-org135d2cf" class="outline-3">
+<h3 id="org135d2cf"><span class="section-number-3">1.1.</span> <a href="#org135d2cf">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org245add2" class="outline-2">
-<h2 id="org245add2"><span class="section-number-2">2.</span> <a href="#org245add2">打工</a></h2>
+<div id="outline-container-org33338cb" class="outline-2">
+<h2 id="org33338cb"><span class="section-number-2">2.</span> <a href="#org33338cb">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org30c99a1" class="outline-2">
-<h2 id="org30c99a1"><span class="section-number-2">3.</span> <a href="#org30c99a1">我的928</a></h2>
+<div id="outline-container-orgd720581" class="outline-2">
+<h2 id="orgd720581"><span class="section-number-2">3.</span> <a href="#orgd720581">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org73b993d" class="outline-3">
-<h3 id="org73b993d"><span class="section-number-3">3.1.</span> <a href="#org73b993d">928演唱会(bushi</a></h3>
+<div id="outline-container-org9ea9b99" class="outline-3">
+<h3 id="org9ea9b99"><span class="section-number-3">3.1.</span> <a href="#org9ea9b99">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org99fbcca">
+<figure id="orgc3a6574">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgb2a23a3">
+<figure id="orgfb121f1">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgb8dca27" class="outline-2">
-<h2 id="orgb8dca27"><span class="section-number-2">4.</span> <a href="#orgb8dca27">他们的928</a></h2>
+<div id="outline-container-org092fdc8" class="outline-2">
+<h2 id="org092fdc8"><span class="section-number-2">4.</span> <a href="#org092fdc8">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org102560b" class="outline-2">
-<h2 id="org102560b"><span class="section-number-2">5.</span> <a href="#org102560b">总结</a></h2>
+<div id="outline-container-org651b53e" class="outline-2">
+<h2 id="org651b53e"><span class="section-number-2">5.</span> <a href="#org651b53e">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 02:47</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 11:22</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
