--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-16 12:12 -->
+<!-- 2022-11-16 12:15 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,47 +46,47 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org8f7c04d">1. 妙妙文章</a>
+<li><a href="#orgcf23fe0">1. 妙妙文章</a>
 <ul>
-<li><a href="#org0ad3b90">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org6620a80">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org4758956">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orgd992777">1.4. 关于编辑器</a></li>
-<li><a href="#org9ea07cb">1.5. 关于代码</a>
+<li><a href="#orga711067">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org9c09851">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orgdf382bb">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org0b8f9e9">1.4. 关于编辑器</a></li>
+<li><a href="#org8c3a551">1.5. 关于代码</a>
 <ul>
-<li><a href="#orgc01a16c">1.5.1. Lisp</a></li>
+<li><a href="#orgd1187fa">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orge43a25a">1.6. 关于CPU</a></li>
-<li><a href="#orgd58b302">1.7. 关于算法</a>
+<li><a href="#org5d61e75">1.6. 关于CPU</a></li>
+<li><a href="#org06e840c">1.7. 关于算法</a>
 <ul>
-<li><a href="#org974cc23">1.7.1. 关于随机</a></li>
+<li><a href="#org6c2b7e3">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org74c2762">1.8. 关于AI</a></li>
-<li><a href="#orga24a457">1.9. 关于软件</a>
+<li><a href="#org898055c">1.8. 关于AI</a></li>
+<li><a href="#orgcfd0982">1.9. 关于软件</a>
 <ul>
-<li><a href="#orge931c78">1.9.1. SQLite</a></li>
+<li><a href="#org8641949">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org9173c6f">1.10. 关于workflow</a></li>
+<li><a href="#org6898fad">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org3ab393d">2. 棒棒视频</a>
+<li><a href="#orgd93752f">2. 棒棒视频</a>
 <ul>
-<li><a href="#org9061d92">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org21501bd">2.2. 各种剧</a></li>
-<li><a href="#org2be71ae">2.3. 电影</a></li>
+<li><a href="#org8fb0189">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org6e9d8b7">2.2. 各种剧</a></li>
+<li><a href="#org7b8b896">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org94643ef">3. 快乐游戏</a></li>
-<li><a href="#orgf2f554c">4. 宝藏博主</a></li>
-<li><a href="#org1c18e24">5. 有意思的</a>
+<li><a href="#org32e30c4">3. 快乐游戏</a></li>
+<li><a href="#org362918a">4. 宝藏博主</a></li>
+<li><a href="#org984cc1c">5. 有意思的</a>
 <ul>
-<li><a href="#orgbb32d1b">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org7ab129f">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#orgc503aa0">6. 我想玩的</a></li>
+<li><a href="#org488eaf7">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -95,8 +95,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org8f7c04d" class="outline-2">
-<h2 id="org8f7c04d"><span class="section-number-2">1.</span> <a href="#org8f7c04d">妙妙文章</a></h2>
+<div id="outline-container-orgcf23fe0" class="outline-2">
+<h2 id="orgcf23fe0"><span class="section-number-2">1.</span> <a href="#orgcf23fe0">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org514d223">
+<figure id="orgffae2f8">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -497,8 +497,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org0ad3b90" class="outline-3">
-<h3 id="org0ad3b90"><span class="section-number-3">1.1.</span> <a href="#org0ad3b90">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-orga711067" class="outline-3">
+<h3 id="orga711067"><span class="section-number-3">1.1.</span> <a href="#orga711067">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -539,8 +539,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-org6620a80" class="outline-3">
-<h3 id="org6620a80"><span class="section-number-3">1.2.</span> <a href="#org6620a80">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org9c09851" class="outline-3">
+<h3 id="org9c09851"><span class="section-number-3">1.2.</span> <a href="#org9c09851">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -570,8 +570,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org4758956" class="outline-3">
-<h3 id="org4758956"><span class="section-number-3">1.3.</span> <a href="#org4758956">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orgdf382bb" class="outline-3">
+<h3 id="orgdf382bb"><span class="section-number-3">1.3.</span> <a href="#orgdf382bb">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -605,8 +605,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orgd992777" class="outline-3">
-<h3 id="orgd992777"><span class="section-number-3">1.4.</span> <a href="#orgd992777">关于编辑器</a></h3>
+<div id="outline-container-org0b8f9e9" class="outline-3">
+<h3 id="org0b8f9e9"><span class="section-number-3">1.4.</span> <a href="#org0b8f9e9">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -622,8 +622,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org9ea07cb" class="outline-3">
-<h3 id="org9ea07cb"><span class="section-number-3">1.5.</span> <a href="#org9ea07cb">关于代码</a></h3>
+<div id="outline-container-org8c3a551" class="outline-3">
+<h3 id="org8c3a551"><span class="section-number-3">1.5.</span> <a href="#org8c3a551">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -648,8 +648,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgc01a16c" class="outline-4">
-<h4 id="orgc01a16c"><span class="section-number-4">1.5.1.</span> <a href="#orgc01a16c">Lisp</a></h4>
+<div id="outline-container-orgd1187fa" class="outline-4">
+<h4 id="orgd1187fa"><span class="section-number-4">1.5.1.</span> <a href="#orgd1187fa">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -672,8 +672,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orge43a25a" class="outline-3">
-<h3 id="orge43a25a"><span class="section-number-3">1.6.</span> <a href="#orge43a25a">关于CPU</a></h3>
+<div id="outline-container-org5d61e75" class="outline-3">
+<h3 id="org5d61e75"><span class="section-number-3">1.6.</span> <a href="#org5d61e75">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -688,8 +688,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orgd58b302" class="outline-3">
-<h3 id="orgd58b302"><span class="section-number-3">1.7.</span> <a href="#orgd58b302">关于算法</a></h3>
+<div id="outline-container-org06e840c" class="outline-3">
+<h3 id="org06e840c"><span class="section-number-3">1.7.</span> <a href="#org06e840c">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -708,8 +708,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org974cc23" class="outline-4">
-<h4 id="org974cc23"><span class="section-number-4">1.7.1.</span> <a href="#org974cc23">关于随机</a></h4>
+<div id="outline-container-org6c2b7e3" class="outline-4">
+<h4 id="org6c2b7e3"><span class="section-number-4">1.7.1.</span> <a href="#org6c2b7e3">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -723,8 +723,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org74c2762" class="outline-3">
-<h3 id="org74c2762"><span class="section-number-3">1.8.</span> <a href="#org74c2762">关于AI</a></h3>
+<div id="outline-container-org898055c" class="outline-3">
+<h3 id="org898055c"><span class="section-number-3">1.8.</span> <a href="#org898055c">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -734,8 +734,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orga24a457" class="outline-3">
-<h3 id="orga24a457"><span class="section-number-3">1.9.</span> <a href="#orga24a457">关于软件</a></h3>
+<div id="outline-container-orgcfd0982" class="outline-3">
+<h3 id="orgcfd0982"><span class="section-number-3">1.9.</span> <a href="#orgcfd0982">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -746,8 +746,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orge931c78" class="outline-4">
-<h4 id="orge931c78"><span class="section-number-4">1.9.1.</span> <a href="#orge931c78">SQLite</a></h4>
+<div id="outline-container-org8641949" class="outline-4">
+<h4 id="org8641949"><span class="section-number-4">1.9.1.</span> <a href="#org8641949">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -761,8 +761,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org9173c6f" class="outline-3">
-<h3 id="org9173c6f"><span class="section-number-3">1.10.</span> <a href="#org9173c6f">关于workflow</a></h3>
+<div id="outline-container-org6898fad" class="outline-3">
+<h3 id="org6898fad"><span class="section-number-3">1.10.</span> <a href="#org6898fad">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -772,8 +772,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org3ab393d" class="outline-2">
-<h2 id="org3ab393d"><span class="section-number-2">2.</span> <a href="#org3ab393d">棒棒视频</a></h2>
+<div id="outline-container-orgd93752f" class="outline-2">
+<h2 id="orgd93752f"><span class="section-number-2">2.</span> <a href="#orgd93752f">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -832,8 +832,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org9061d92" class="outline-3">
-<h3 id="org9061d92"><span class="section-number-3">2.1.</span> <a href="#org9061d92">Veritasium 真理元素</a></h3>
+<div id="outline-container-org8fb0189" class="outline-3">
+<h3 id="org8fb0189"><span class="section-number-3">2.1.</span> <a href="#org8fb0189">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -858,8 +858,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org21501bd" class="outline-3">
-<h3 id="org21501bd"><span class="section-number-3">2.2.</span> <a href="#org21501bd">各种剧</a></h3>
+<div id="outline-container-org6e9d8b7" class="outline-3">
+<h3 id="org6e9d8b7"><span class="section-number-3">2.2.</span> <a href="#org6e9d8b7">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -883,8 +883,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org2be71ae" class="outline-3">
-<h3 id="org2be71ae"><span class="section-number-3">2.3.</span> <a href="#org2be71ae">电影</a></h3>
+<div id="outline-container-org7b8b896" class="outline-3">
+<h3 id="org7b8b896"><span class="section-number-3">2.3.</span> <a href="#org7b8b896">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -910,7 +910,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="org33d69d8">
+<figure id="org9581e9c">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -927,8 +927,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org94643ef" class="outline-2">
-<h2 id="org94643ef"><span class="section-number-2">3.</span> <a href="#org94643ef">快乐游戏</a></h2>
+<div id="outline-container-org32e30c4" class="outline-2">
+<h2 id="org32e30c4"><span class="section-number-2">3.</span> <a href="#org32e30c4">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -958,8 +958,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgf2f554c" class="outline-2">
-<h2 id="orgf2f554c"><span class="section-number-2">4.</span> <a href="#orgf2f554c">宝藏博主</a></h2>
+<div id="outline-container-org362918a" class="outline-2">
+<h2 id="org362918a"><span class="section-number-2">4.</span> <a href="#org362918a">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -970,7 +970,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org07b91be">
+<figure id="orgfa80a54">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -978,8 +978,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org1c18e24" class="outline-2">
-<h2 id="org1c18e24"><span class="section-number-2">5.</span> <a href="#org1c18e24">有意思的</a></h2>
+<div id="outline-container-org984cc1c" class="outline-2">
+<h2 id="org984cc1c"><span class="section-number-2">5.</span> <a href="#org984cc1c">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1011,8 +1011,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orgbb32d1b" class="outline-3">
-<h3 id="orgbb32d1b"><span class="section-number-3">5.1.</span> <a href="#orgbb32d1b">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org7ab129f" class="outline-3">
+<h3 id="org7ab129f"><span class="section-number-3">5.1.</span> <a href="#org7ab129f">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1024,8 +1024,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orgc503aa0" class="outline-2">
-<h2 id="orgc503aa0"><span class="section-number-2">6.</span> <a href="#orgc503aa0">我想玩的</a></h2>
+<div id="outline-container-org488eaf7" class="outline-2">
+<h2 id="org488eaf7"><span class="section-number-2">6.</span> <a href="#org488eaf7">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1048,7 +1048,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-11-08 21:46</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 12:12</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 12:15</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
