Update from https://github.com/thebesttv/eserver-static/commit/fb17aa03537d4d25d872ecbdad4aa51a5dd08b02

--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-16 12:15 -->
+<!-- 2022-11-16 12:17 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -46,12 +46,12 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgd694a98">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#orgc357423">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#org3c0e82d">1.1. window config &amp; register</a></li>
-<li><a href="#orgcdccfb6">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#orga62cf36">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#org060136d">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#orgf96a85b">1.1. window config &amp; register</a></li>
+<li><a href="#org7d8f3fa">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#org3fb9897">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#orgb43ef58">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -59,12 +59,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgd694a98" class="outline-2">
-<h2 id="orgd694a98"><span class="section-number-2">1.</span> <a href="#orgd694a98">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-orgc357423" class="outline-2">
+<h2 id="orgc357423"><span class="section-number-2">1.</span> <a href="#orgc357423">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org3c0e82d" class="outline-3">
-<h3 id="org3c0e82d"><span class="section-number-3">1.1.</span> <a href="#org3c0e82d">window config &amp; register</a></h3>
+<div id="outline-container-orgf96a85b" class="outline-3">
+<h3 id="orgf96a85b"><span class="section-number-3">1.1.</span> <a href="#orgf96a85b">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -78,8 +78,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-orgcdccfb6" class="outline-3">
-<h3 id="orgcdccfb6"><span class="section-number-3">1.2.</span> <a href="#orgcdccfb6"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-org7d8f3fa" class="outline-3">
+<h3 id="org7d8f3fa"><span class="section-number-3">1.2.</span> <a href="#org7d8f3fa"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -102,8 +102,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orga62cf36" class="outline-3">
-<h3 id="orga62cf36"><span class="section-number-3">1.3.</span> <a href="#orga62cf36"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-org3fb9897" class="outline-3">
+<h3 id="org3fb9897"><span class="section-number-3">1.3.</span> <a href="#org3fb9897"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -116,8 +116,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org060136d" class="outline-3">
-<h3 id="org060136d"><span class="section-number-3">1.4.</span> <a href="#org060136d"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-orgb43ef58" class="outline-3">
+<h3 id="orgb43ef58"><span class="section-number-3">1.4.</span> <a href="#orgb43ef58"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -136,7 +136,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 12:15</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 12:17</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
