--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-16 12:15 -->
+<!-- 2022-11-16 12:17 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org13db11a">1. 暑假</a>
+<li><a href="#org6e0c3ce">1. 暑假</a>
 <ul>
-<li><a href="#org9312a7b">1.1. 夏令营</a></li>
+<li><a href="#org3aad8db">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orgead391b">2. 打工</a></li>
-<li><a href="#orga005c29">3. 我的928</a>
+<li><a href="#org376c649">2. 打工</a></li>
+<li><a href="#org1165c24">3. 我的928</a>
 <ul>
-<li><a href="#org5e69e4c">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org1762563">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org66d9302">4. 他们的928</a></li>
-<li><a href="#orge2b5966">5. 总结</a></li>
+<li><a href="#org6874c13">4. 他们的928</a></li>
+<li><a href="#orgb0d3eb5">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="orgbc40e8f">
+<figure id="org11abe3c">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org13db11a" class="outline-2">
-<h2 id="org13db11a"><span class="section-number-2">1.</span> <a href="#org13db11a">暑假</a></h2>
+<div id="outline-container-org6e0c3ce" class="outline-2">
+<h2 id="org6e0c3ce"><span class="section-number-2">1.</span> <a href="#org6e0c3ce">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-org9312a7b" class="outline-3">
-<h3 id="org9312a7b"><span class="section-number-3">1.1.</span> <a href="#org9312a7b">夏令营</a></h3>
+<div id="outline-container-org3aad8db" class="outline-3">
+<h3 id="org3aad8db"><span class="section-number-3">1.1.</span> <a href="#org3aad8db">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgead391b" class="outline-2">
-<h2 id="orgead391b"><span class="section-number-2">2.</span> <a href="#orgead391b">打工</a></h2>
+<div id="outline-container-org376c649" class="outline-2">
+<h2 id="org376c649"><span class="section-number-2">2.</span> <a href="#org376c649">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orga005c29" class="outline-2">
-<h2 id="orga005c29"><span class="section-number-2">3.</span> <a href="#orga005c29">我的928</a></h2>
+<div id="outline-container-org1165c24" class="outline-2">
+<h2 id="org1165c24"><span class="section-number-2">3.</span> <a href="#org1165c24">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org5e69e4c" class="outline-3">
-<h3 id="org5e69e4c"><span class="section-number-3">3.1.</span> <a href="#org5e69e4c">928演唱会(bushi</a></h3>
+<div id="outline-container-org1762563" class="outline-3">
+<h3 id="org1762563"><span class="section-number-3">3.1.</span> <a href="#org1762563">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org8ab4318">
+<figure id="org1365f56">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org465c007">
+<figure id="orgb766e32">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org66d9302" class="outline-2">
-<h2 id="org66d9302"><span class="section-number-2">4.</span> <a href="#org66d9302">他们的928</a></h2>
+<div id="outline-container-org6874c13" class="outline-2">
+<h2 id="org6874c13"><span class="section-number-2">4.</span> <a href="#org6874c13">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orge2b5966" class="outline-2">
-<h2 id="orge2b5966"><span class="section-number-2">5.</span> <a href="#orge2b5966">总结</a></h2>
+<div id="outline-container-orgb0d3eb5" class="outline-2">
+<h2 id="orgb0d3eb5"><span class="section-number-2">5.</span> <a href="#orgb0d3eb5">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 12:15</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 12:17</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
